[project]
name = "ragaiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "inngest==0.5.18",
    "llama-index-core>=0.14.16",
    "llama-index-readers-file>=0.5.6",
    "openai>=2.30.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "streamlit>=1.50.0",
    "uvicorn>=0.39.0",
]
